[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/icons/expand_right_hover.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Ubuntu-16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/icons/dungeons/sw.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/clear_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/dungeons/hc.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/dungeons/tr.png" type="Texture" id=6]
[ext_resource path="res://src/GUI/NotesWindow.gd" type="Script" id=15]
[ext_resource path="res://src/GUI/DoorsButton.tscn" type="PackedScene" id=16]

[sub_resource type="StreamTexture" id=46]
flags = 4
load_path = "res://.import/expand_right.png-f27ba24b66577507bab9de6ff79c29fe.stex"

[sub_resource type="StreamTexture" id=47]
flags = 4
load_path = "res://.import/clear.png-9c103e458e7e934be3ed45be5263dd91.stex"

[sub_resource type="StreamTexture" id=32]
flags = 4
load_path = "res://.import/ep_color.png-a1c72b519a19b7845533ef1ef41b7349.stex"

[sub_resource type="StreamTexture" id=45]
flags = 4
load_path = "res://.import/dp.png-c33158f245c5ef68ca11246bf473894c.stex"

[sub_resource type="StreamTexture" id=35]
flags = 4
load_path = "res://.import/th_color.png-a06ab45725f9a2c4b9d0ce116b491b4f.stex"

[sub_resource type="StreamTexture" id=36]
flags = 4
load_path = "res://.import/at_color.png-46e7443ab16a357a9c8398aab8eb96c3.stex"

[sub_resource type="StreamTexture" id=37]
flags = 4
load_path = "res://.import/pd_color.png-7409530162f77ddfa33c8d2adbfa3678.stex"

[sub_resource type="StreamTexture" id=38]
flags = 4
load_path = "res://.import/sp_color.png-ebd1a93e26aadcb254e1cece0677ce97.stex"

[sub_resource type="StreamTexture" id=39]
flags = 4
load_path = "res://.import/tt_color.png-888291bd922da4fedeafdfb7a86cbe71.stex"

[sub_resource type="StreamTexture" id=40]
flags = 4
load_path = "res://.import/ip_color.png-c37b6fda0fef2546f484a3a196f37ecc.stex"

[sub_resource type="StreamTexture" id=41]
flags = 4
load_path = "res://.import/mm_color.png-cb41d5ae3842165bad84a2040b622b39.stex"

[sub_resource type="StreamTexture" id=44]
flags = 4
load_path = "res://.import/gt_color.png-f41f4da21357167bfa81f66151f95d8f.stex"

[node name="NotesWindow" type="HSplitContainer"]
anchor_bottom = 1.0
margin_right = -1498.0
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 2
script = ExtResource( 15 )

[node name="NotesMargin" type="MarginContainer" parent="."]
margin_right = 328.0
margin_bottom = 950.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="NotesMargin"]
margin_left = 8.0
margin_top = 8.0
margin_right = 324.0
margin_bottom = 942.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="NotesMargin/VBoxContainer"]
margin_right = 316.0
margin_bottom = 14.0

[node name="NotesLabel" type="Label" parent="NotesMargin/VBoxContainer/HBoxContainer"]
margin_right = 42.0
margin_bottom = 14.0
text = "Notes:"

[node name="Expand" type="TextureButton" parent="NotesMargin/VBoxContainer/HBoxContainer"]
visible = false
modulate = Color( 0.996078, 1, 1, 1 )
margin_left = 300.0
margin_right = 316.0
margin_bottom = 16.0
size_flags_horizontal = 10
texture_normal = SubResource( 46 )
texture_hover = ExtResource( 1 )

[node name="NotesEdit" type="TextEdit" parent="NotesMargin/VBoxContainer"]
margin_top = 18.0
margin_right = 316.0
margin_bottom = 722.0
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
highlight_current_line = true
show_line_numbers = true
highlight_all_occurrences = true
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChecksContainer" type="HBoxContainer" parent="NotesMargin/VBoxContainer"]
margin_top = 726.0
margin_right = 316.0
margin_bottom = 750.0

[node name="KeysLabel" type="Label" parent="NotesMargin/VBoxContainer/ChecksContainer"]
margin_top = 5.0
margin_right = 185.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Keys Saved/Needed:"

[node name="VitalsLabel" type="Label" parent="NotesMargin/VBoxContainer/ChecksContainer"]
margin_left = 189.0
margin_top = 5.0
margin_right = 264.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Vitals C/T:"

[node name="VitalsCheckBox" type="CheckBox" parent="NotesMargin/VBoxContainer/ChecksContainer"]
margin_left = 268.0
margin_right = 292.0
margin_bottom = 24.0

[node name="ClearButton" type="TextureButton" parent="NotesMargin/VBoxContainer/ChecksContainer"]
modulate = Color( 0.996078, 1, 1, 1 )
margin_left = 296.0
margin_right = 316.0
margin_bottom = 24.0
size_flags_horizontal = 8
texture_normal = SubResource( 47 )
texture_hover = ExtResource( 4 )

[node name="Current" type="HBoxContainer" parent="NotesMargin/VBoxContainer"]
margin_top = 754.0
margin_right = 316.0
margin_bottom = 770.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeysSavedLabel" type="Label" parent="NotesMargin/VBoxContainer/Current"]
margin_top = 1.0
margin_right = 24.0
margin_bottom = 15.0
rect_min_size = Vector2( 24, 0 )
text = "0"

[node name="KeysSavedSlider" type="HSlider" parent="NotesMargin/VBoxContainer/Current"]
margin_left = 28.0
margin_right = 156.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 11.0
rounded = true
tick_count = 11
ticks_on_borders = true

[node name="VitalsCurrentLabel" type="Label" parent="NotesMargin/VBoxContainer/Current"]
margin_left = 160.0
margin_top = 1.0
margin_right = 184.0
margin_bottom = 15.0
rect_min_size = Vector2( 24, 0 )
text = "0"

[node name="VitalsCurrentSlider" type="HSlider" parent="NotesMargin/VBoxContainer/Current"]
margin_left = 188.0
margin_right = 316.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 20.0
rounded = true
tick_count = 20
ticks_on_borders = true

[node name="Total" type="HBoxContainer" parent="NotesMargin/VBoxContainer"]
margin_top = 774.0
margin_right = 316.0
margin_bottom = 790.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeysNeededLabel" type="Label" parent="NotesMargin/VBoxContainer/Total"]
margin_top = 1.0
margin_right = 24.0
margin_bottom = 15.0
rect_min_size = Vector2( 24, 0 )
text = "0"

[node name="KeysNeededSlider" type="HSlider" parent="NotesMargin/VBoxContainer/Total"]
margin_left = 28.0
margin_right = 156.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 11.0
rounded = true
tick_count = 11
ticks_on_borders = true

[node name="VitalsTotalLabel" type="Label" parent="NotesMargin/VBoxContainer/Total"]
margin_left = 160.0
margin_top = 1.0
margin_right = 184.0
margin_bottom = 15.0
rect_min_size = Vector2( 24, 0 )
text = "0"

[node name="VitalsTotalSlider" type="HSlider" parent="NotesMargin/VBoxContainer/Total"]
margin_left = 188.0
margin_right = 316.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 20.0
rounded = true
tick_count = 20
ticks_on_borders = true

[node name="Dungeons" type="VBoxContainer" parent="NotesMargin/VBoxContainer"]
margin_top = 794.0
margin_right = 316.0
margin_bottom = 934.0

[node name="LWDungeons" type="HBoxContainer" parent="NotesMargin/VBoxContainer/Dungeons"]
margin_right = 316.0
margin_bottom = 44.0

[node name="HC" parent="NotesMargin/VBoxContainer/Dungeons/LWDungeons" instance=ExtResource( 16 )]
total_checks = 8
total_keys = 1
icon = ExtResource( 5 )
color = Color( 0.678431, 0.380392, 0.235294, 1 )

[node name="EP" parent="NotesMargin/VBoxContainer/Dungeons/LWDungeons" instance=ExtResource( 16 )]
margin_left = 64.0
margin_right = 124.0
total_checks = 6
icon = SubResource( 32 )
color = Color( 0.627451, 0.25098, 0.905882, 1 )

[node name="DP" parent="NotesMargin/VBoxContainer/Dungeons/LWDungeons" instance=ExtResource( 16 )]
margin_left = 128.0
margin_right = 188.0
total_checks = 6
total_keys = 1
icon = SubResource( 45 )
color = Color( 1, 0, 0, 1 )

[node name="TH" parent="NotesMargin/VBoxContainer/Dungeons/LWDungeons" instance=ExtResource( 16 )]
margin_left = 192.0
margin_right = 252.0
total_checks = 6
total_keys = 1
icon = SubResource( 35 )
color = Color( 1, 0.556863, 0.839216, 1 )

[node name="AT" parent="NotesMargin/VBoxContainer/Dungeons/LWDungeons" instance=ExtResource( 16 )]
margin_left = 256.0
margin_right = 316.0
total_checks = 2
total_keys = 2
icon = SubResource( 36 )
color = Color( 1, 0.647059, 0, 1 )

[node name="DWDungeons1" type="HBoxContainer" parent="NotesMargin/VBoxContainer/Dungeons"]
margin_top = 48.0
margin_right = 316.0
margin_bottom = 92.0

[node name="PD" parent="NotesMargin/VBoxContainer/Dungeons/DWDungeons1" instance=ExtResource( 16 )]
total_checks = 14
total_keys = 6
icon = SubResource( 37 )
color = Color( 1, 1, 0, 1 )

[node name="SP" parent="NotesMargin/VBoxContainer/Dungeons/DWDungeons1" instance=ExtResource( 16 )]
margin_left = 64.0
margin_right = 124.0
total_checks = 10
total_keys = 1
icon = SubResource( 38 )
color = Color( 0.105882, 0.937255, 1, 1 )

[node name="SW" parent="NotesMargin/VBoxContainer/Dungeons/DWDungeons1" instance=ExtResource( 16 )]
margin_left = 128.0
margin_right = 188.0
total_checks = 8
total_keys = 3
icon = ExtResource( 3 )
color = Color( 0.419608, 0.831373, 0.419608, 1 )

[node name="TT" parent="NotesMargin/VBoxContainer/Dungeons/DWDungeons1" instance=ExtResource( 16 )]
margin_left = 192.0
margin_right = 252.0
total_checks = 8
total_keys = 1
icon = SubResource( 39 )
color = Color( 1, 0, 1, 1 )

[node name="DWDungeons2" type="HBoxContainer" parent="NotesMargin/VBoxContainer/Dungeons"]
margin_top = 96.0
margin_right = 316.0
margin_bottom = 140.0

[node name="IP" parent="NotesMargin/VBoxContainer/Dungeons/DWDungeons2" instance=ExtResource( 16 )]
total_checks = 8
total_keys = 2
icon = SubResource( 40 )
color = Color( 0.392157, 0.65098, 0.929412, 1 )

[node name="MM" parent="NotesMargin/VBoxContainer/Dungeons/DWDungeons2" instance=ExtResource( 16 )]
margin_left = 64.0
margin_right = 124.0
total_checks = 8
total_keys = 3
icon = SubResource( 41 )
color = Color( 0, 1, 0, 1 )

[node name="TR" parent="NotesMargin/VBoxContainer/Dungeons/DWDungeons2" instance=ExtResource( 16 )]
margin_left = 128.0
margin_right = 188.0
total_checks = 12
total_keys = 4
icon = ExtResource( 6 )
color = Color( 1, 0.894118, 0.768627, 1 )

[node name="GT" parent="NotesMargin/VBoxContainer/Dungeons/DWDungeons2" instance=ExtResource( 16 )]
margin_left = 192.0
margin_right = 252.0
total_checks = 27
total_keys = 4
icon = SubResource( 44 )
color = Color( 0.501961, 0, 0, 1 )
